Criando nova animação e testando novas configs do OG

--- a/projetolandingpage/style.css
+++ b/projetolandingpage/style.css
@@ -55,6 +55,10 @@ main{
 #futuroicone{
     width: 130px;
     height: 130px;
+    position: relative;
+}
+canvas{
+    position: absolute;
 }
 #topo{
     display: flex;
