--- a/exercicios-javascript/javascript-aula2/css/exercicio-9.css
+++ b/exercicios-javascript/javascript-aula2/css/exercicio-9.css
@@ -1,16 +1,19 @@
-#container{display: flex;}
-img{
-    border: 2px solid;
-    border-radius: 5px;
-    margin: 2px;
-    width: 100px;
+#container {
+  display: flex;
 }
-#pneuCheio{
-    display: none;
-    position: absolute;
-    top: 0;
-    z-index: 2;
+img {
+  border: 2px solid;
+  border-radius: 5px;
+  margin: 2px;
+  width: 100px;
+  cursor: pointer;
 }
-#pneuMurcho{
-    position: relative;
+#pneuCheio {
+  display: none;
+  position: absolute;
+  top: 0;
+  z-index: 2;
+}
+#pneuMurcho {
+  position: relative;
 }
