--- a/exercicios-javascript/javascript-aula3/css/exercicio-8.css
+++ b/exercicios-javascript/javascript-aula3/css/exercicio-8.css
@@ -1,33 +1,41 @@
 body {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  width: 500px;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	width: 500px;
 }
+
 #btnContainer {
-  display: flex;
+	display: flex;
 }
+
 .btnAlarme {
-  border: 2px solid;
-  margin: 15px;
-  width: 50px;
-  height: 50px;
-  font-weight: bold;
-  background-color: red;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	cursor: pointer;
+	border: 2px solid;
+	border-radius: 15px;
+	margin: 15px;
+	width: 50px;
+	height: 50px;
+	font-weight: bold;
+	background-color: red;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
+
 #desativaAlarme {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 2px solid;
-  margin: 15px;
-  width: 300px;
-  height: 50px;
-  background-color: rgb(19, 146, 250);
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border: 2px solid;
+	border-radius: 15px;
+	margin: 15px;
+	width: 300px;
+	height: 50px;
+	background-color: rgb(19, 146, 250);
+}
+
+#exercicio {
+	flex-direction: column;
 }
