--- a/exercicios-javascript/main.css
+++ b/exercicios-javascript/main.css
@@ -22,15 +22,52 @@ nav {
 }
 
 button {
-	border-radius: 15px;
-	padding: 7px;
+	cursor: pointer;
+	border: solid 1px;
+	border-radius: 10px;
+	box-shadow: 2px 2px;
+	margin: 2px;
+	padding: 5px;
 	outline: none;
+	transition: ease 0.2s;
+}
+
+button:active {
+	box-shadow: 0 0;
+}
+
+button:hover {
+	background-color: grey;
 }
 
 input {
-	border-radius: 15px;
-	padding: 7px;
+	border: solid 1px;
+	border-radius: 10px;
+	margin: 2px;
+	padding: 5px;
 	outline: none;
+}
+
+select {
+	border: solid 1px;
+	border-radius: 5px;
+}
+
+textarea {
+	border: none;
+	outline: none;
+	border-radius: 5px;
+	padding: 5px;
+}
+
+table,
+th,
+td {
+	margin: 5px;
+	border: solid 1px;
+	border-radius: 5px;
+	border-collapse: collapse;
+	padding: 5px;
 }
 
 #explicacao {
