--- a/exercicios-javascript/main.css
+++ b/exercicios-javascript/main.css
@@ -51,6 +51,7 @@ input {
 select {
 	border: solid 1px;
 	border-radius: 5px;
+	outline: none;
 }
 
 textarea {
@@ -84,6 +85,7 @@ td {
 	width: fit-content;
 	border: solid purple;
 	border-radius: 15px;
+	margin-right: 5px;
 	padding: 7px;
 }
 
