Pequenos ajustes no CSS e logica de navegacao

--- a/exercicios-javascript/javascript-aula10/css/exercicio-5.css
+++ b/exercicios-javascript/javascript-aula10/css/exercicio-5.css
@@ -30,8 +30,12 @@ span {
 }
 
 #btnBuscar {
-	position: absolute;
-	left: 137px;
+	position: relative;
+	right: 62px;
+}
+
+#btnCadastrar {
+	width: 180px;
 }
 
 #editProdutoContainer {
