--- a/exercicios-javascript/javascript-aula12/style.css
+++ b/exercicios-javascript/javascript-aula12/style.css
@@ -1,132 +1,142 @@
-body{
-    background-color: rgb(22, 22, 22);
-    color: aliceblue;
+body {
+	background-color: rgb(22, 22, 22);
+	color: aliceblue;
+	margin: 0;
+	padding: 0;
+	font-family: Arial, sans-serif;
 }
-a{
-    color: aliceblue;
-    text-decoration: none;
-}
-
-header{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    height: 50px;
-}
-section{
-    display: flex;
-    justify-content: center;
-    text-align: center;
-}
-#about{
-    position: relative;
-    align-items: center;
-    width: 100%;
-    height: 600px;
-}
-#about h1{
-    font-size: 40px;
-}
-#about div{
-    border-radius: 10px;
-    background-color: rgba(26, 25, 25, 0.397);
-}
-#about img{
-    border-radius: 20px;
-    z-index: -1;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-}
-#explore{
-    flex-direction: column;
-    margin: 30px;
-}
-#explore div{
-    margin: 30px;
-}
-#explore p{
-    margin-left: 70px;
-    margin-right: 70px;
-}
-#cards{
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    margin: 30px;
-}
-#cards img{
-    border-radius: 10px;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-}
-#cards p{
-    background-color: rgba(26, 25, 25, 0.397);
-    position: absolute;
-    bottom: 0;
-    z-index: 1;
-}
-#cards h3{
-    background-color: rgba(26, 25, 25, 0.397);
-    display: flex;
-    position: absolute;
-    bottom: 20px;
-}
-#cards div{
-    display: flex;
-    width: 200px;
-    height: 300px;
-    position: relative;
-}
-#journal{
-    display: flex;
-    flex-direction: column;
-}
-#journal div{
-    margin: 20px;
-}
-#journal img{
-    border-radius: 20px;
-    width: 400px;
-}
-#journal :nth-child(3){
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin: 30px;
-}
-#journal >div>div{
-    width: 100%;
-}
-#journal :nth-child(4){
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-left: 50px;
-    margin-right: 50px;
-}
-footer{
-    display: block;
-    width: 100%;
-    height: 600px;
-    text-align: center;
-}
-footer img{
-    border-radius: 20px;
-    width: 100%;
-    height: 600px;
-}
-footer div{
-    margin-left: 70px;
-    margin-right: 70px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+a {
+	color: aliceblue;
+	text-decoration: none;
 }
 
+header {
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	height: 50px;
+}
+section {
+	display: flex;
+	justify-content: center;
+	text-align: center;
+}
+#about {
+	position: relative;
+	align-items: center;
+	width: 100%;
+	height: 600px;
+}
+#about h1 {
+	font-size: 40px;
+}
+#about div {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	width: 40%;
+	height: 30%;
+	background: radial-gradient(
+		circle,
+		rgba(0, 0, 0, 0.5) 10%,
+		rgba(0, 0, 0, 0.3) 40%,
+		rgba(0, 0, 0, 0) 100%
+	);
+}
+#about img {
+	border-radius: 20px;
+	z-index: -1;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+}
+#explore {
+	flex-direction: column;
+	margin: 30px;
+}
+#explore div {
+	margin: 30px;
+}
+#explore p {
+	margin-left: 70px;
+	margin-right: 70px;
+}
+#cards {
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
+	margin: 30px;
+}
+#cards img {
+	border-radius: 10px;
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+}
+#cards p {
+	background-color: rgba(26, 25, 25, 0.397);
+	position: absolute;
+	bottom: 0;
+}
+#cards h3 {
+	background: radial-gradient(circle, rgba(0, 0, 0, 0.5) 10%, rgba(0, 0, 0, 0.2) 100%);
+	display: flex;
+	position: absolute;
+	bottom: 20px;
+}
+#cards div {
+	display: flex;
+	width: 200px;
+	height: 300px;
+	position: relative;
+}
+#journal {
+	display: flex;
+	flex-direction: column;
+}
+#journal div {
+	margin: 20px;
+}
+#journal img {
+	border-radius: 20px;
+	width: 400px;
+}
+#journal :nth-child(3) {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	margin: 30px;
+}
+#journal > div > div {
+	width: 100%;
+}
+#journal :nth-child(4) {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-left: 50px;
+	margin-right: 50px;
+}
+footer {
+	display: block;
+	width: 100%;
+	height: 600px;
+	text-align: center;
+}
+footer img {
+	border-radius: 20px;
+	width: 100%;
+	height: 600px;
+}
+footer div {
+	margin-left: 70px;
+	margin-right: 70px;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
