--- a/main.css
+++ b/main.css
@@ -9,6 +9,8 @@ code {
   color: #e4e69c;
 } */
 
+/* Area reservada aos estilos genéricos*/
+
 body {
 	margin: 0;
 	display: flex;
@@ -16,62 +18,28 @@ body {
 	overflow-x: hidden;
 }
 
+header {
+	width: 100%;
+	background-color: aqua;
+	padding-left: 20px;
+	position: absolute;
+	top: 0;
+	display: flex;
+	z-index: 2;
+}
+
+header nav {
+	display: flex;
+}
+
 a {
 	cursor: pointer;
 	color: brown;
-	text-decoration: underline;
+	text-decoration: none;
 }
 
-nav {
-	border: solid;
-	border-radius: 15px;
-	padding: 7px;
-	width: fit-content;
-}
-
-#content {
-	transition: ease 0.8s;
-	flex: 1;
-	padding: 1rem;
-}
-
-#sideNavbar {
-	font-size: small;
-	font-family: Arial, sans-serif;
-	border-radius: 10px;
-	transition: ease 0.5s;
-	width: 250px;
-	height: 100vh;
-	display: flex;
-	color: brown;
-	background-color: antiquewhite;
-	flex-direction: column;
-	padding: 1rem;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	position: fixed;
-	z-index: 1;
-	box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5); /* Sombra para destacar */
-}
-
-#sideNavbar a {
-	color: brown;
-	text-decoration: underline;
-}
-
-#sideNavBtn {
-	border-radius: 7px;
-	position: fixed;
-	flex: 1;
-	z-index: 2;
-	height: 100vh;
-	width: 15px;
-}
-
-#linkNav {
-	margin-top: 10px;
-	background-color: aliceblue;
+a:visited {
+	color: green;
 }
 
 button {
@@ -124,6 +92,27 @@ td {
 	padding: 5px;
 }
 
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding-left: 15px;
+}
+
+/* Area reservada aos estilos com ID e Classes */
+.sideNav {
+	margin: 5px;
+	display: flex;
+	flex-direction: column;
+}
+
+.sideNav :first-child {
+	font-size: 9px;
+}
+
+.sideNav :last-child {
+	font-size: 12px;
+}
+
 #explicacao {
 	border: solid blue;
 	border-radius: 15px;
@@ -140,6 +129,72 @@ td {
 	border-radius: 15px;
 	margin-right: 5px;
 	padding: 7px;
+}
+
+#content {
+	margin-top: 70px;
+	transition: ease 0.8s;
+	flex: 1;
+	padding: 1rem;
+}
+
+#sideNavbar {
+	margin-top: 72px;
+	scrollbar-color: transparent transparent;
+	scrollbar-width: thin;
+	overflow-y: scroll;
+	font-family: Arial, sans-serif;
+	transition: ease 0.5s;
+	width: 250px;
+	display: flex;
+	background-color: antiquewhite;
+	flex-direction: column;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	position: fixed;
+	z-index: 1;
+	box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5); /* Sombra para destacar */
+}
+
+#sideNavbar:hover {
+	scrollbar-color: rgb(95, 168, 95) transparent;
+}
+
+#sideNavbar li {
+	display: flex;
+	padding: 5px;
+	background: rgb(250, 235, 215);
+	background: linear-gradient(180deg, rgba(250, 235, 215, 1) 50%, rgba(227, 227, 169, 1) 100%);
+}
+
+#sideNavBtn {
+	transition: ease 0.5s;
+	color: green;
+	border: solid green 1px;
+	border-radius: 0;
+	margin: 0;
+	margin-top: 72px;
+	position: fixed;
+	top: 70;
+	flex: 1;
+	z-index: 2;
+	height: 91vh;
+	width: 15px;
+	box-shadow: 2px 0 5px rgba(0, 0, 0, 0.3);
+}
+
+#sideNavBtn:hover {
+	background-color: goldenrod;
+}
+
+#linkNav {
+	margin-top: 10px;
+	background-color: aliceblue;
+	border: solid;
+	border-radius: 15px;
+	padding: 7px;
+	width: fit-content;
 }
 
 /* Define a animação chamada 'moverLado' */
