--- a/exercicios-javascript/javascript-aula12/style.css
+++ b/exercicios-javascript/javascript-aula12/style.css
@@ -5,12 +5,12 @@ body {
 	padding: 0;
 	font-family: Arial, sans-serif;
 }
-a {
+#content a {
 	color: aliceblue;
 	text-decoration: none;
 }
 
-header {
+#content header {
 	display: flex;
 	align-items: center;
 	justify-content: space-around;
