--- a/main.css
+++ b/main.css
@@ -14,27 +14,12 @@ code {
 body {
 	margin: 0;
 	display: flex;
-	height: 100vh;
 	overflow-x: hidden;
-}
-
-header {
-	width: 100%;
-	background-color: aqua;
-	padding-left: 20px;
-	position: absolute;
-	top: 0;
-	display: flex;
-	z-index: 2;
-}
-
-header nav {
-	display: flex;
 }
 
 a {
 	cursor: pointer;
-	color: brown;
+	color: green;
 	text-decoration: none;
 }
 
@@ -92,25 +77,35 @@ td {
 	padding: 5px;
 }
 
-ul {
+/* Area reservada aos estilos com ID e Classes */
+
+.customUl {
 	list-style-type: none;
 	margin: 0;
 	padding-left: 15px;
 }
 
-/* Area reservada aos estilos com ID e Classes */
-.sideNav {
-	margin: 5px;
+.customUl li {
+	transition: ease;
+	border-radius: 7px;
 	display: flex;
-	flex-direction: column;
+	padding: 5px;
+	align-items: center;
 }
 
-.sideNav :first-child {
-	font-size: 9px;
+.customUl li:hover {
+	background-color: aquamarine;
 }
 
-.sideNav :last-child {
-	font-size: 12px;
+.clickable {
+	cursor: pointer;
+}
+
+#content {
+	margin-top: 30px;
+	transition: ease 0.8s;
+	flex: 1;
+	padding: 1rem;
 }
 
 #explicacao {
@@ -131,15 +126,28 @@ ul {
 	padding: 7px;
 }
 
-#content {
-	margin-top: 70px;
-	transition: ease 0.8s;
-	flex: 1;
-	padding: 1rem;
+.header {
+	position: fixed;
+	font-size: medium;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	width: 100%;
+	height: 30px;
+	background-color: aqua;
+	color: #345e46;
+	padding-left: 20px;
+	top: 0;
+	padding-left: 15px;
+	display: flex;
+	z-index: 2;
+}
+
+.header nav {
+	display: flex;
+	width: 100%;
 }
 
 #sideNavbar {
-	margin-top: 72px;
+	margin-top: 31px;
 	scrollbar-color: transparent transparent;
 	scrollbar-width: thin;
 	overflow-y: scroll;
@@ -162,10 +170,32 @@ ul {
 }
 
 #sideNavbar li {
-	display: flex;
-	padding: 5px;
+	display: block;
+	margin: 5px;
+	padding: 2px;
 	background: rgb(250, 235, 215);
 	background: linear-gradient(180deg, rgba(250, 235, 215, 1) 50%, rgba(227, 227, 169, 1) 100%);
+}
+
+#sideNavbar li :hover {
+	border-radius: 7px;
+	background: #345e46;
+	color: antiquewhite;
+}
+
+#sideNavbar a {
+	padding: 5px;
+	display: flex;
+	flex-direction: column;
+}
+
+#sideNavbar strong {
+	font-size: 14px;
+}
+
+#sideNavbar small {
+	font-size: 11px;
+	opacity: 0.7;
 }
 
 #sideNavBtn {
@@ -174,18 +204,12 @@ ul {
 	border: solid green 1px;
 	border-radius: 0;
 	margin: 0;
-	margin-top: 72px;
+	margin-top: 30px;
 	position: fixed;
-	top: 70;
-	flex: 1;
 	z-index: 2;
-	height: 91vh;
+	height: calc(100vh - 30px);
 	width: 15px;
 	box-shadow: 2px 0 5px rgba(0, 0, 0, 0.3);
-}
-
-#sideNavBtn:hover {
-	background-color: goldenrod;
 }
 
 #linkNav {
@@ -195,6 +219,29 @@ ul {
 	border-radius: 15px;
 	padding: 7px;
 	width: fit-content;
+}
+
+.logo {
+	transition: ease;
+	border-radius: 7px;
+	display: flex;
+	padding: 5px;
+	align-items: center;
+}
+
+.logo:hover {
+	background-color: aquamarine;
+}
+
+.logo:active {
+	background-color: purple;
+}
+
+.menu {
+	display: flex;
+	width: 100%;
+	justify-content: space-evenly;
+	align-items: center;
 }
 
 /* Define a animação chamada 'moverLado' */
@@ -250,5 +297,10 @@ ul {
 	100% {
 		transform: translateX(0%);
 		opacity: 100%;
+	}
+}
+
+@keyframes preencheCorLateral {
+	0% {
 	}
 }
