--- a/main.css
+++ b/main.css
@@ -108,6 +108,14 @@ td {
 	padding: 1rem;
 }
 
+#btnExplicacao {
+	position: absolute;
+	right: 20px;
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+}
+
 #explicacao {
 	border: solid blue;
 	border-radius: 15px;
@@ -132,11 +140,9 @@ td {
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	width: 100%;
 	height: 30px;
-	background-color: aqua;
+	background-color: rgb(138, 170, 231);
 	color: #345e46;
-	padding-left: 20px;
 	top: 0;
-	padding-left: 15px;
 	display: flex;
 	z-index: 2;
 }
@@ -230,8 +236,13 @@ td {
 	transition: ease;
 	border-radius: 7px;
 	display: flex;
-	padding: 5px;
+	padding-left: 10px;
+	padding-right: 10px;
 	align-items: center;
+}
+
+.logo > a {
+	color: rgb(97, 36, 36);
 }
 
 .logo:hover {
@@ -240,6 +251,10 @@ td {
 
 .logo:active {
 	background-color: purple;
+}
+
+.logo > a:active {
+	color: antiquewhite;
 }
 
 .menu {
