--- a/main.css
+++ b/main.css
@@ -113,8 +113,7 @@ td {
 	margin-top: 45px;
 	transition: ease 0.8s;
 	flex: 1;
-	padding-top: 1rem;
-	padding-left: 1rem;
+	padding: 1rem;
 }
 
 #btnExplicacao {
@@ -347,7 +346,7 @@ td {
 	margin-top: 45px;
 	position: fixed;
 	z-index: 2;
-	height: calc(100vh - 30px);
+	height: calc(100vh - 45px);
 	width: 15px;
 	box-shadow: 2px 0 5px rgba(0, 0, 0, 0.3);
 }
