--- a/estudos/exercicios-javascript/javascript-aula2/css/exercicio-6.css
+++ b/estudos/exercicios-javascript/javascript-aula2/css/exercicio-6.css
@@ -14,7 +14,8 @@
 	border: 2px solid;
 	border-radius: 15px;
 	padding: 5px;
-	width: 400px;
+	max-width: 400px;
+	margin: 5px;
 	display: flex;
 	flex-direction: column;
 }
@@ -22,8 +23,8 @@
 	border: 2px solid;
 	border-radius: 15px;
 	padding: 5px;
-	margin-right: 25px;
-	width: 250px;
+	max-width: 400px;
+	margin: 5px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
