--- a/estudos/exercicios-javascript/javascript-aula2/css/exercicio-8.css
+++ b/estudos/exercicios-javascript/javascript-aula2/css/exercicio-8.css
@@ -1,3 +1,8 @@
+#content {
+	width: 100vw;
+	height: 100vh;
+}
+
 #botaoEbook {
 	cursor: pointer;
 	color: white;
@@ -20,7 +25,7 @@
 #modalEbook {
 	font-size: 0.7rem;
 	display: none;
-	max-width: 400px;
+	max-width: 300px;
 	background-color: white;
 	padding: 20px;
 	margin: 20vw;
